# quantum-image-shield

./: ,prompt  .gitignore  .prompts  CLEANUP_AUDIT.md  COMPREHENSIVE_GUIDE.md  DEVELOPMENT_GUIDE.md  Dockerfile.python  ENTERPRISE_ARCHITECTURE_PLAN.md  HOW_TO_TEST.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_ANALYSIS.md  MVP_SETUP.md  PHASE_1_COMPLETION_REPORT.md  PROJECT_REPORT.md  QUICK_START.md  README.md  SECURITY_AUDIT.md  SIMPLE_MVP.md  STATUS.md  STRUCTURE_FIXED.md  TEAM_DIVISION.md  VIDEO_PRESENTATION_SCRIPTS.md  VIVA_QNA.md  app.py  batch_encrypt.py  cleanup.ps1  demo_screenshots.py  docker-compose.yml  encryptor.py  example_usage.py  generate_grpc.ps1  generate_grpc.sh  image_analysis.py  image_encryptor.py  pyproject.toml  python_grpc_server.py  qrand.py  quantum_key_generator.py  requirements-dev.txt  (+6 more)
backend/: .env.example  .gitignore  Dockerfile  README.md  go.mod
backend/cmd/api/: main.go
backend/internal/middleware/: auth.go
docs/: IMPLEMENTATION_SUMMARY.md  MERGE_PLAN.md  PROJECT_SUMMARY.md  SECURITY_AUDIT.md  USAGE.md
examples/: encryption_keys.npz  example_usage.py  streamlit_app.py
frontend/: next.config.mjs  package-lock.json  package.json
quantum_image_shield/: .gitignore  README.md  __init__.py  analysis.py  cli.py  decryption.py  encryption.py  quantum_key_generator.py  requirements.txt  security.py  validators.py
quantum_image_shield/tests/: test_quantum_key_generator.py
scripts/: generate_sample_image.py  validate_installation.py  verify.py
tests/: __init__.py  test_encryption_decryption.py  test_quantum_key_generator.py
(+6 files in other folders)
